--- a/love6.html
+++ b/love6.html
@@ -82,84 +82,70 @@
     <div class="a">활자.</div>
 
     <div class="q">구체적으로 말해줄 수 있나요?</div>
-    <div class="a">
-제가 활자 중독이거든요. 이해하기 쉽게 말하자면, 소설을 정말 많이 읽는 사람이에요.  
+    <div class="a">제가 활자 중독이거든요. 이해하기 쉽게 말하자면, 소설을 정말 많이 읽는 사람이에요.  
 스크린타임을 보면… 어제만 3시간 정도 읽었네요.
     </div>
 
     <div class="q">지금 읽고 있는 소설은 뭐예요?</div>
-    <div class="a">
-최근에 읽고 있는 소설은 <너희들은 변호됐다>라는 웹소설이에요. 이 소설은 검사 출신인 남자의 이야기를 다뤘어요. 
+    <div class="a">최근에 읽고 있는 소설은 <너희들은 변호됐다>라는 웹소설이에요. 이 소설은 검사 출신인 남자의 이야기를 다뤘어요. 
 한 기업에서 약을 출시했는데 그 약이 주인공과 얽히며, 약과 관련된 기업 총수의 어두운 부분을 파고 들어가는 법정물이에요.
     </div>
 
     <div class="q">듣기만 해도 흥미로워요. 명조 씨는 이 웹소설과 같은 장르물을 좋아하시는 건가요?</div>
-    <div class="a">
-네. 그런데 장르물도 좋아하지만, 역시 가장 좋아하는 건 로맨스예요.
+    <div class="a">네. 그런데 장르물도 좋아하지만, 역시 가장 좋아하는 건 로맨스예요.
     </div>
 
     <div class="q">가장 좋아하는 로맨스 소설을 말해줄 수 있나요?</div>
-    <div class="a">
-<당신의 이해를 돕기 위하여>와 <유월의 복숭아>, <악녀를 죽여줘>를 좋아합니다. 저는 원 앤 온리 소설이 좋아요. 
+    <div class="a"><당신의 이해를 돕기 위하여>와 <유월의 복숭아>, <악녀를 죽여줘>를 좋아합니다. 저는 원 앤 온리 소설이 좋아요. 
 원 앤 온리 소설은 서브 남주의 존재가 희미하고, 다른 사람과 얽힌 것 없이, 오직 남자, 여자 주인공 둘만의 서사가 중심이 되는 소설을 말해요. 
 원 앤 온리 소설이 좋은 이유는 이 세상에는 존재하지 않는 사랑 같아서예요. 그런 로맨스야말로 진짜 판타지처럼 느껴지거든요.
     </div>
 
     <div class="q">현실에서 존재하지 않는다고 느끼는 이유는 뭐예요?</div>
-    <div class="a">
-우선 그런 사람을 한 번도 목격한 적이 없어서예요. 겪어본 적도 없고요. 실제로 한 사람을 평생 사랑한다는 게 어려운 일이기도 하잖아요. 
+    <div class="a">우선 그런 사람을 한 번도 목격한 적이 없어서예요. 겪어본 적도 없고요. 실제로 한 사람을 평생 사랑한다는 게 어려운 일이기도 하잖아요. 
 그래서 저는 굳건한 관계를 보여주는 원 앤 온리 소설이 더 빛난다고 생각해요.
     </div>
 
     <div class="q">좋아하는 소설 속 주인공과 명조 씨가 닮은 점은 뭐예요?</div>
-    <div class="a">
-비슷한 점이 뭔지 생각해본 적은 없어요. 
+    <div class="a">비슷한 점이 뭔지 생각해본 적은 없어요. 
 비슷한 게 없어서 웹소설을 좋아 하게 된 것 같아요. 나와는 다른 선택을 하는 걸 보는 게 좋아서요.
     </div>
 
     <div class="q">다른 선택을 했을 때 쾌감을 느꼈던 장면이 있나요?</div>
-    <div class="a">
-<악녀를 죽여줘>는 기존 로판 소설과는 달리, 주인공이 원래 세계로 돌아가고 싶어서 발버둥쳐요. 
+    <div class="a"><악녀를 죽여줘>는 기존 로판 소설과는 달리, 주인공이 원래 세계로 돌아가고 싶어서 발버둥쳐요. 
 결국 사랑하는 사람을 두고 기존의 세계로 돌아가는 선택을 했는데, 그게 인상 깊었어요. 저였다면 사랑하는 사람 곁에 남아 안주할 것 같거든요.
     </div>
 
     <div class="q">그 선택이 잘못됐다고 생각하진 않아요?</div>
-    <div class="a">
-그 사람에게는 기존의 현실 세계가 더 중요한 가치였겠죠? 
+    <div class="a">그 사람에게는 기존의 현실 세계가 더 중요한 가치였겠죠? 
 저는 소설 속 인물들의 다양한 선택을 존중하고 싶어요.
     </div>
 
     <div class="q">만약 명조 씨가 소설 속 그 상황이었다면 어떤 선택을 했을 것 같아요?</div>
-    <div class="a">
-처음에는 저도 돌아가고 싶었을 것 같아요. 그런데 상황에 익숙해지면 돌아갈 방법을 찾기보다는 체념하지 않았을까요? 
+    <div class="a">처음에는 저도 돌아가고 싶었을 것 같아요. 그런데 상황에 익숙해지면 돌아갈 방법을 찾기보다는 체념하지 않았을까요? 
 또, 남자 주인공과 다시 만날 수 있다는 확신이 있다면 돌아가기를 결단했겠지만, 그렇지 않았다면 결단하지 못했을 것 같아요.
 사랑하는 사람을 다시 만날 수 있는 확률은 희박하거든요.
     </div>
 
     <div class="q">소설 속 사랑에 대해 묻고 싶어요. 소설 속 인물들의 사랑에 대해 할 말이 있다면요?</div>
-    <div class="a">
-오로지 상대의 행복과 안위를 위해서 수백 번의 죽음도 마다하지 않는 사람이 존재하는 게 로맨스 소설이에요. 
+    <div class="a">오로지 상대의 행복과 안위를 위해서 수백 번의 죽음도 마다하지 않는 사람이 존재하는 게 로맨스 소설이에요. 
 현실에서는 수백 번의 죽음을 극복하면서까지 사랑을 유지할 수 있는 사람은 극히 드물 거라고 생각해요.
     </div>
 
     <div class="q">그럼 혹시 나에게도 이런 사랑이? 하고 언제나 가슴 떨려 하고 있을 거라고 믿어도 될까요?</div>
-    <div class="a">
-아뇨. 저에겐 찾아올 거라고 생각하진 않아요. 아 없어요 그냥.
+    <div class="a">아뇨. 저에겐 찾아올 거라고 생각하진 않아요. 아 없어요 그냥.
     </div>
 
     <div class="q">앞으로 읽고 싶은 소설은?</div>
-    <div class="a">
-<어두운 바다에 등불이 되어>라는 소설이에요. 
+    <div class="a"><어두운 바다에 등불이 되어>라는 소설이에요. 
 주인공은 재난 상황에서도 선함을 잃지 않는 등불 같은 사람이에요. 
 포스트 아포칼립스 장르도 새롭고, 재난 상황 속에서 발휘되는 주인공의 선함과 엄청난 반전 포인트가 이 소설을 이끌어가는 힘이랍니다. 
 반전 포인트는 엄청난 스포이기 때문에. 직접 읽어보시길 추천합니다.
     </div>
 
     <div class="q">마지막으로
-'소설이 내게 주는 힘'에 대해 말해봅시다.
-</div>
-    <div class="a">
-기본적으로 저의 무료함을 달래줘요. 
+'소설이 내게 주는 힘'에 대해 말해봅시다.</div>
+    <div class="a">기본적으로 저의 무료함을 달래줘요. 
 겪어보지 않은 세상을 간접적으로 체험할 수 있게 해주고, 세상에는 없을 사랑을 한 번쯤 꿈꾸게 해줍니다. 
     </div>
 
